Add Libib csv import.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,9 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         application.qrc
         connection.h
         globalvars.h
+        Libib.h
+        datetimechrono.h
+        libibparser.h libibparser.cpp
 
     )
 # Define target properties for Android with Qt 6 as:
