--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         Libib.h
         datetimechrono.h
         libibparser.h libibparser.cpp
+        libibcollection.h libibcollection.cpp
 
     )
 # Define target properties for Android with Qt 6 as:
